<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cahier de texte</string>
    <string name="menu_settings">Settings</string>
    <string name="buttonQuitter">Quitter</string>
    <string name="buttonAjouter">Ajouter un travail</string>
    <string name="buttonSelect">Selectionner un travail</string>
    <string name="date">Date</string>
    <string name="classe">Classe</string>
    <string name="travail">Travail</string>
    <string name="notes">Notes</string>
    <string name="buttonAdd">Ajouter</string>
    <string name="buttonRetour">Retour</string>
    <string name="title_activity_ajouter">Ajouter un travail</string>
    <string name="matiere">Matière</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_chercher">Chercher un travail</string>
    <string name="buttonSearch">Rechercher</string>
    <string name="title_activity_liste_travaux">Liste des travaux</string>
    <string name="buttonUpdate">Mettre à jour</string>
    <string name="buttonDelete">Supprimer</string>
    <string name="title_activity_editer">Editer ou supprimer un travail</string>

</resources>