<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView android:id="@+id/textViewDate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"
	        android:paddingTop="10dip"
	        android:text="@string/date"
	        android:textSize="17sp" />
	    
	    <DatePicker
	        android:id="@+id/datePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	    <TextView android:id="@+id/textViewClasse"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"
	        android:paddingTop="10dip"
	        android:text="@string/classe"
	        android:textSize="17sp" />
	    
	    <EditText android:id="@+id/editTextClasse"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_marginBottom="15dip"
	        android:singleLine="true"
	        android:inputType="text" />
	    
	    <TextView android:id="@+id/textViewMatiere"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"
	        android:paddingTop="10dip"
	        android:text="@string/matiere"
	        android:textSize="17sp" />
	    
	    <EditText android:id="@+id/editTextMatiere"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_marginBottom="15dip"
	        android:singleLine="true"
	        android:inputType="text" />
	    
	    <TextView android:id="@+id/textViewTravail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"
	        android:paddingTop="10dip"
	        android:text="@string/travail"
	        android:textSize="17sp" />
	    
	    <EditText android:id="@+id/editTextTravail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_marginBottom="15dip"
	        android:ems="10"
	        android:inputType="text"
	        android:singleLine="true" >
	    </EditText>
	    
	    <TextView android:id="@+id/textViewNotes"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"
	        android:paddingTop="10dip"
	        android:text="@string/notes"
	        android:textSize="17sp" />
	    
	    <EditText android:id="@+id/editTextNotes"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_marginBottom="15dip"
	        android:lines="4"
	        android:gravity="top" />
	    
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <Button
	            android:id="@+id/buttonAdd"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/buttonAdd"
	            android:layout_weight="1" />
	        
	        <Button
	            android:id="@+id/buttonRetour"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/buttonRetour"
	            android:layout_weight="1" />
	    </LinearLayout>	
	</LinearLayout>
</ScrollView>