<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonAjouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonLister"
        android:layout_marginTop="20dp"
        android:text="@string/buttonAjouter" />
    
    <Button 
        android:id="@+id/buttonQuitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonAjouter"
        android:layout_marginTop="20dp"
        android:text="@string/buttonQuitter"/>

    <Button
        android:id="@+id/buttonLister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp"
        android:text="@string/buttonSelect" />
    
</RelativeLayout>